<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Exercise3Activity">

    <Button
        android:id="@+id/btn1"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn2"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="50dp"
        android:text="@string/btn2" />
    <Button
        android:id="@+id/btn3"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:text="@string/btn3" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:layout_marginLeft="25dp"
        android:text="@string/btn4"
        style="@style/Button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn5"
        android:layout_marginRight="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="170dp"
        android:layout_alignParentBottom="true"
        android:text="@string/btn5"
        style="@style/Button"/>
</RelativeLayout>