<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.MainActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/btnEx1"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_Ex1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/btnEx2"
        android:id="@+id/btn_Ex2"/>
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/btnEx3"
        android:id="@+id/btn_Ex3"/>



</LinearLayout>